Use flex-wrap in layout-three-columns to prevent overflows

--- a/blocks/init/src/Blocks/components/layout-three-columns/layout-three-columns-style.scss
+++ b/blocks/init/src/Blocks/components/layout-three-columns/layout-three-columns-style.scss
@@ -2,4 +2,6 @@
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+	flex-wrap: wrap;
+	gap: 0.75rem;
 }
